// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`regression snapshots matches snapshot: empty state 1`] = `
<div>
  <div
    class="w-full h-full flex flex-col"
  >
    <div>
      <div
        class="flex items-center justify-between"
      >
        <div>
          <h1
            class="text-3xl font-bold text-gray-900"
          >
            Sessions & Packages
          </h1>
          <p
            class="text-sm text-gray-600 mt-0.5"
          >
            Click on a category to view and edit its session types. 
            <br />
             Click on a session card to view/manage any details.
          </p>
        </div>
        <button
          class="flex items-center gap-2 px-4 py-2 rounded-lg bg-black text-white text-sm cursor-pointer hover:bg-gray-700 transition-all"
        >
          <span
            data-testid="icon-plus"
          />
          New Category
        </button>
      </div>
      <div
        class="mt-6 grow flex flex-col"
      >
        <div
          class="text-center py-16 text-gray-400"
        >
          <p
            class="text-lg font-serif"
          >
            No categories yet.
          </p>
          <p
            class="text-sm mt-2"
          >
            Create your first category to get started.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`regression snapshots matches snapshot: error state 1`] = `
<div>
  <div
    class="w-full h-full flex flex-col"
  >
    <div>
      <div
        class="flex items-center justify-between"
      >
        <div>
          <h1
            class="text-3xl font-bold text-gray-900"
          >
            Sessions & Packages
          </h1>
          <p
            class="text-sm text-gray-600 mt-0.5"
          >
            Click on a category to view and edit its session types. 
            <br />
             Click on a session card to view/manage any details.
          </p>
        </div>
        <button
          class="flex items-center gap-2 px-4 py-2 rounded-lg bg-black text-white text-sm cursor-pointer hover:bg-gray-700 transition-all"
        >
          <span
            data-testid="icon-plus"
          />
          New Category
        </button>
      </div>
      <div
        class="mt-6 grow flex flex-col"
      >
        <div
          class="grow flex flex-col text-center items-center justify-center"
        >
          <p
            class="text-sm text-red-600 mb-2"
          >
            Snap error
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`regression snapshots matches snapshot: expanded category with children 1`] = `
<div>
  <div
    class="w-full h-full flex flex-col"
  >
    <div>
      <div
        class="flex items-center justify-between"
      >
        <div>
          <h1
            class="text-3xl font-bold text-gray-900"
          >
            Sessions & Packages
          </h1>
          <p
            class="text-sm text-gray-600 mt-0.5"
          >
            Click on a category to view and edit its session types. 
            <br />
             Click on a session card to view/manage any details.
          </p>
        </div>
        <button
          class="flex items-center gap-2 px-4 py-2 rounded-lg bg-black text-white text-sm cursor-pointer hover:bg-gray-700 transition-all"
        >
          <span
            data-testid="icon-plus"
          />
          New Category
        </button>
      </div>
      <div
        class="mt-6 grow flex flex-col"
      >
        <div
          class="space-y-6"
        >
          <div>
            <p
              class="text-sm uppercase tracking-wider text-gray-600 mt-4 mb-2"
            >
              Select a Category
            </p>
            <div
              class="grid grid-cols-2 ml-2 mr-2 gap-2 md:grid-cols-3 md:ml-8 md:mr-8 md:gap-4 "
            >
              <div
                class="group cursor-pointer rounded-xl border overflow-hidden bg-white shadow-sm transition-all
                            border-[#7E4C3C] ring-2 ring-[#7E4C3C]/20 shadow-md
                          "
              >
                <div
                  class="h-28 w-full bg-neutral-100 overflow-hidden relative"
                >
                  <div
                    class="h-full w-full flex items-center justify-center bg-neutral-50"
                  >
                    <span
                      class="text-neutral-300 text-xs"
                    >
                      No image
                    </span>
                  </div>
                </div>
                <div
                  class="flex items-center gap-2 px-3 py-2.5"
                >
                  <span
                    class="h-4 w-4 rounded-full border-2 flex items-center justify-center shrink-0 transition
                              border-[#7E4C3C]"
                  >
                    <span
                      class="h-2 w-2 rounded-full bg-[#7E4C3C]"
                    />
                  </span>
                  <span
                    class="font-medium text-sm text-neutral-800"
                  >
                    Weddings
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-6 rounded-xl border border-[#7E4C3C]/20 bg-[#FAF7F2] p-6 space-y-6"
          >
            <div
              class="flex items-center justify-between"
            >
              <p
                class="text-[12px] uppercase tracking-widest text-gray-500"
              >
                Available packages in 
                Weddings
              </p>
              <button
                class="flex items-center gap-1.5 px-3 py-1.5 rounded-lg border border-dashed border-[#AB8C4B]/30 bg-white text-sm font-sans text-[#AB8C4B] hover:border-[#AB8C4B]/50 hover:bg-[#AB8C4B]/5 transition cursor-pointer font-medium"
              >
                <span
                  data-testid="icon-plus"
                />
                 Add Package
              </button>
            </div>
            <div
              class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
            >
              <div
                data-testid="session-card-master-1"
              >
                <span>
                  Weddings Master
                </span>
                <button
                  data-testid="edit-master-1"
                >
                  Edit
                </button>
                <button
                  data-testid="delete-master-1"
                >
                  Delete
                </button>
              </div>
              <div
                data-testid="session-card-child-2"
              >
                <span>
                  Pearl Package
                </span>
                <button
                  data-testid="edit-child-2"
                >
                  Edit
                </button>
                <button
                  data-testid="delete-child-2"
                >
                  Delete
                </button>
              </div>
              <div
                data-testid="session-card-child-1"
              >
                <span>
                  Ivory Package
                </span>
                <button
                  data-testid="edit-child-1"
                >
                  Edit
                </button>
                <button
                  data-testid="delete-child-1"
                >
                  Delete
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`regression snapshots matches snapshot: loading state 1`] = `
<div>
  <div
    class="w-full h-full flex flex-col"
  >
    <div>
      <div
        class="flex items-center justify-between"
      >
        <div>
          <h1
            class="text-3xl font-bold text-gray-900"
          >
            Sessions & Packages
          </h1>
          <p
            class="text-sm text-gray-600 mt-0.5"
          >
            Click on a category to view and edit its session types. 
            <br />
             Click on a session card to view/manage any details.
          </p>
        </div>
        <button
          class="flex items-center gap-2 px-4 py-2 rounded-lg bg-black text-white text-sm cursor-pointer hover:bg-gray-700 transition-all"
        >
          <span
            data-testid="icon-plus"
          />
          New Category
        </button>
      </div>
      <div
        class="mt-6 grow flex flex-col"
      >
        <div
          class="flex flex-col items-center justify-center grow text-gray-500"
        >
          <span
            data-testid="icon-loader"
          />
          <p
            class="text-sm"
          >
            Loading questionnaire templates...
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`regression snapshots matches snapshot: masters list without selection 1`] = `
<div>
  <div
    class="w-full h-full flex flex-col"
  >
    <div>
      <div
        class="flex items-center justify-between"
      >
        <div>
          <h1
            class="text-3xl font-bold text-gray-900"
          >
            Sessions & Packages
          </h1>
          <p
            class="text-sm text-gray-600 mt-0.5"
          >
            Click on a category to view and edit its session types. 
            <br />
             Click on a session card to view/manage any details.
          </p>
        </div>
        <button
          class="flex items-center gap-2 px-4 py-2 rounded-lg bg-black text-white text-sm cursor-pointer hover:bg-gray-700 transition-all"
        >
          <span
            data-testid="icon-plus"
          />
          New Category
        </button>
      </div>
      <div
        class="mt-6 grow flex flex-col"
      >
        <div
          class="space-y-6"
        >
          <div>
            <p
              class="text-sm uppercase tracking-wider text-gray-600 mt-4 mb-2"
            >
              Select a Category
            </p>
            <div
              class="grid grid-cols-2 ml-2 mr-2 gap-2 md:grid-cols-3 md:ml-8 md:mr-8 md:gap-4 "
            >
              <div
                class="group cursor-pointer rounded-xl border overflow-hidden bg-white shadow-sm transition-all
                            border-black/10 hover:border-black/20 hover:shadow-md
                          "
              >
                <div
                  class="h-28 w-full bg-neutral-100 overflow-hidden relative"
                >
                  <div
                    class="h-full w-full flex items-center justify-center bg-neutral-50"
                  >
                    <span
                      class="text-neutral-300 text-xs"
                    >
                      No image
                    </span>
                  </div>
                </div>
                <div
                  class="flex items-center gap-2 px-3 py-2.5"
                >
                  <span
                    class="h-4 w-4 rounded-full border-2 flex items-center justify-center shrink-0 transition
                              border-black/30"
                  />
                  <span
                    class="font-medium text-sm text-neutral-800"
                  >
                    Weddings
                  </span>
                </div>
              </div>
              <div
                class="group cursor-pointer rounded-xl border overflow-hidden bg-white shadow-sm transition-all
                            border-black/10 hover:border-black/20 hover:shadow-md
                          "
              >
                <div
                  class="h-28 w-full bg-neutral-100 overflow-hidden relative"
                >
                  <img
                    alt="Portraits"
                    class="h-full w-full object-cover transition-transform duration-300 group-hover:scale-[1.03]"
                    src="https://test.supabase.co/storage/v1/object/public/session-images/portraits/hero.jpg"
                  />
                  <div
                    class="absolute top-2 right-2 px-2 py-0.5 rounded-full bg-white/90 text-[9px] text-neutral-500 uppercase tracking-wide"
                  >
                    Inactive
                  </div>
                </div>
                <div
                  class="flex items-center gap-2 px-3 py-2.5"
                >
                  <span
                    class="h-4 w-4 rounded-full border-2 flex items-center justify-center shrink-0 transition
                              border-black/30"
                  />
                  <span
                    class="font-medium text-sm text-neutral-800"
                  >
                    Portraits
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
